Alignment Fixes
- Added padding to Splitter Logo
- Changed out Splitter Logo for Figma's svg (more true to the design vs using the given assets)
- Changed the background color of the body according to Figma design

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -2,8 +2,9 @@
     font-size: 11px;
     text-align: center;
     width: 100%;
-    position: relative;
     color: $grayish-cyan;
+    top: 97%;
+    position: absolute;
 }
 
 .attribution a { 
