--- a/styles/layout/_forms.scss
+++ b/styles/layout/_forms.scss
@@ -6,29 +6,24 @@
 }
 
 body {
-    background-color:  HSL(190, 49%, 84%);
+    background-color:  #C5E4E7;
     font-size: rem-calc(16px);
     font-weight: 700;
     font-family: $font-family;
-    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     min-width: 100vw;
-    position: relative;
-    display: flex;
     padding: 0;
     margin: 0;
 
     .wrapper {
-        margin: auto;
+        margin: 0 auto;
         min-width: 100%;
-        min-height: 100%;
-        
-        .attribution {
-            position: absolute;
-            top: 97%;
-        }
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
 
@@ -54,8 +49,9 @@ input[type="radio"] {
 
 .container {
     @extend .center-flex;
-    margin-bottom: 4.5rem;
     position: relative;
+    height: 100%;
+    width: 100%;
 
     .tip-calculator {
         @extend .center-flex;
@@ -64,7 +60,7 @@ input[type="radio"] {
         border-radius: 25px;
         max-width: rem-calc(375px);
         max-height: rem-calc(789px);
-        box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.20);
 
         .input-section{
             max-width: rem-calc(311px);
