--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -8,11 +8,9 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+
     .splitter-img {
-        margin-top: rem-calc(50px);
-        width: rem-calc(86.66px);
-        height: rem-calc(53.14px);
-        margin-bottom: rem-calc(40.86px);
+        position: relative;
+        margin-bottom: 5.49rem;
     }
 }
