--- a/styles/main.css
+++ b/styles/main.css
@@ -202,28 +202,24 @@ NEUTRALS
 }
 
 body {
-  background-color: HSL(190, 49%, 84%);
+  background-color: #C5E4E7;
   font-size: 1rem;
   font-weight: 700;
   font-family: "Space Mono", monospace;
-  position: relative;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   min-width: 100vw;
-  position: relative;
-  display: flex;
   padding: 0;
   margin: 0;
 }
 body .wrapper {
-  margin: auto;
+  margin: 0 auto;
   min-width: 100%;
-  min-height: 100%;
-}
-body .wrapper .attribution {
-  position: absolute;
-  top: 97%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 input[type=number]::-webkit-outer-spin-button,
@@ -247,8 +243,9 @@ input[type=radio] {
 }
 
 .container {
-  margin-bottom: 4.5rem;
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 .container .tip-calculator {
   padding: 2rem 1.5rem 2rem 1.5rem;
@@ -256,7 +253,7 @@ input[type=radio] {
   border-radius: 25px;
   max-width: 23.4375rem;
   max-height: 49.3125rem;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.2);
 }
 .container .tip-calculator .input-section {
   max-width: 19.4375rem;
@@ -449,8 +446,9 @@ DESKTOP MEDIA QUERIES
   font-size: 11px;
   text-align: center;
   width: 100%;
-  position: relative;
   color: hsl(184, 14%, 56%);
+  top: 97%;
+  position: absolute;
 }
 
 .attribution a {
@@ -469,8 +467,6 @@ header {
   justify-content: center;
 }
 header .splitter-img {
-  margin-top: 3.125rem;
-  width: 5.41625rem;
-  height: 3.32125rem;
-  margin-bottom: 2.55375rem;
+  position: relative;
+  margin-bottom: 5.49rem;
 }/*# sourceMappingURL=main.css.map */
